--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,11 @@
 
   <body>
     <%= yield %>
+
+    <% content_for(:navbar) do %>
+      <li><a href="/">Home</a></li>
+      <li><a href="products/index">Products</a></li>
+    <% end %>
+
   </body>
 </html>
