fix ability to edit product

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Product</h1>
 
-<%= render "layouts/errors", :object => @story %>
+<%= render "layouts/errors", :object => @product %>
 
 <%= form_for @product do |f| %>
   <%= f.label :"Edit Name" %>
