--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,17 +2,6 @@
 
 <%= render "layouts/errors", :object => @product %>
 
-<%= form_for @product do |f| %>
-  <%= f.label :"Edit Name" %>
-  <%= f.text_field :name %>
-  <hr>
-  <%= f.label :"Edit Cost" %>
-  <%= f.number_field :cost %>
-  <hr>
-  <%= f.label :"Edit Country of Origin" %>
-  <%= f.text_field :country_of_origin %>
-  <hr>
-  <%= f.submit %>
-<% end %>
+<%= render "layouts/form" %>
 
 <p><%= link_to "Return to product", product_path %></p>
