--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,8 +9,21 @@
 
 <p><%= link_to "Return to Products", products_path %></p>
 
+<h4>Here are the reviews for this product:</h4>
+
+  <ul>
+    <% @product.reviews.each do |review| %>
+      <li>
+        <%= review.description %> |
+        <%= link_to "Edit", edit_product_review_path(@product, review) %> |
+        <%= link_to "Delete", product_review_path(@product, review),
+                                 :data => {:confirm => "Are you sure?",
+                                                :method => "delete"} %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>There are no reviews yet!</p>
 
 
-<% @product.reviews.each do |product| %>
-  <% product.name %>
-<% end %>
+<p><%= link_to "Add a review", new_product_review_path(@product) %></p>
