--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 </ul>
 <hr>
-<%= link_to "New Review", new_review_path %>
+<%= link_to "New Review", new_product_review_path %>
 <hr>
 <%= link_to "Products", products_path %>
 
