--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <%= flash[:alert] %>
+    <%= flash[:notice] %>
+
     <%= yield %>
 
     <% content_for(:navbar) do %>
