--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @reviews.each do |review| %>
-    <li><%= link_to review.description, review_path(review) %></li>
+    <li><%= link_to review.description, product_reviews_path(review) %></li>
   <% end %>
 </ul>
 <hr>
