add integration testing for adding new product

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,3 +24,11 @@
     <li><%= product.name %></li>
   <% end %>
 </ol>
+
+<h3>Product made in the USA </h3>
+
+<ol>
+  <% @products.madeinusa.each do |product| %>
+    <li><%= product.name %></li>
+  <% end %>
+</ol>
