--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -2,14 +2,6 @@
 
 <%= render "layouts/errors", :object => @review %>
 
-<%= form_for @review do |f| %>
-  <%= f.label :"Edit Review Description" %>
-  <%= f.text_field :description %>
-  <hr>
-  <%= f.label :"Edit Rating" %>
-  <%= f.number_field :rating %>
-  <hr>
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
 
-<p><%= link_to "Return to review", review_path %></p>
+<p><%= link_to "Return to review", product_reviews_path %></p>
