--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,10 +1,12 @@
 <h1>Reviews</h1>
 
 <ul>
-  <% @reviews.each do |review| %>
+  <% @review.each do |review| %>
     <li><%= link_to review.description, product_reviews_path(review) %></li>
   <% end %>
 </ul>
+<hr>
+<%= link_to "New Review", new_product_review_path %>
 <hr>
 <%= link_to "Products", products_path %>
 
