--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PowerUpFoods</title>
+    <title>Power Up Foods</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <%= flash[:alert] %>
     <%= flash[:notice] %>
+<div class="container">
+
 
     <%= yield %>
-
+</div>
     <% content_for(:navbar) do %>
       <li><a href="/">Home</a></li>
       <li><a href="products/index">Products</a></li>
