--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -29,6 +29,6 @@
 
 <ol>
   <% @products.madeinusa.each do |product| %>
-    <li><%= product.name %></li>
+    <li><%= link_to product.name, product_path(product) %></li>
   <% end %>
 </ol>
