fix most reviews

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,15 +21,11 @@ nav {
   background: red;
   opacity: .5;
   height: 140px;
+  color: white;
 }
 
 .navbar-header {
   color: white;
   font-size: 30px;
   text-align: center;
-}
-
-.homelinktext {
-  color: gold;
-  text-align: right;
 }
