--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -21,7 +21,7 @@
 
 <ol>
   <% @products.most_reviews.each do |product| %>
-    <li><%= product.name %></li>
+    <li><%= link_to product.name, product_path(product) %></li>
   <% end %>
 </ol>
 
