--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,8 +15,8 @@
     <% @product.reviews.each do |review| %>
       <li>
         <%= review.description %> |
-        <%= link_to "Edit", edit_product_review_path(@product, review) %> |
-        <%= link_to "Delete", product_review_path(@product, review),
+        <%= link_to "Update", edit_product_review_path(@product, review) %> |
+        <%= link_to "Delete Review", product_review_path(@product, review),
                                  :data => {:confirm => "Are you sure?",
                                                 :method => "delete"} %>
       </li>
